Significant cleanups in service calls, especially parameter validation; a few performance improvements and small refactors