@@ -18,8 +18,9 @@ import java.util.*;
 public class ContextStack implements Map<String, Object> {
     protected final static org.slf4j.Logger logger = org.slf4j.LoggerFactory.getLogger(ContextStack.class);
 
-    // Using ArrayList for more efficient iterating, this alone eliminate about 40% of the run time in get()
-    private ArrayList<ArrayList<MapWrapper>> contextStack = null;
+    private LinkedList<ArrayList<MapWrapper>> contextStack = null;
+    private LinkedList<Map<String, Object>> contextCombinedStack = null;
+
     private ArrayList<MapWrapper> stackList = new ArrayList<>();
     private Map<String, Object> topMap = null;
     private Map<String, Object> combinedMap = null;
@@ -89,8 +90,10 @@ public class ContextStack implements Map<String, Object> {
 
     /** Push (save) the entire context, ie the whole Map stack, to create an isolated empty context. */
     public ContextStack pushContext() {
-        if (contextStack == null) contextStack = new ArrayList<>();
-        contextStack.add(0, stackList);
+        if (contextStack == null) contextStack = new LinkedList<>();
+        if (contextCombinedStack == null) contextCombinedStack = new LinkedList<>();
+        contextStack.addFirst(stackList);
+        contextCombinedStack.addFirst(combinedMap);
         stackList = new ArrayList<>();
         clearCombinedMap();
         push();
@@ -100,9 +103,9 @@ public class ContextStack implements Map<String, Object> {
     /** Pop (restore) the entire context, ie the whole Map stack, undo isolated empty context and get the original one. */
     public ContextStack popContext() {
         if (contextStack == null || contextStack.size() == 0) throw new IllegalStateException("Cannot pop context, no context pushed");
-        stackList = contextStack.remove(0);
+        stackList = contextStack.removeFirst();
+        combinedMap = contextCombinedStack.removeFirst();
         topMap = stackList.get(0).getWrapped();
-        rebuildCombinedMap();
         return this;
     }
 
